update css contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -389,7 +389,7 @@ footer .copyright {
 }
 
 footer a {
-    color: white; /* Set anchor text color to white */
+    color: white; /* Set anchor text colour to white */
 }
 
 footer a:hover {
@@ -626,12 +626,12 @@ button:hover {
 .star {
     font-size: 1em;
     cursor: pointer;
-    color: rgb(198, 229, 21);
+    color: rgb(81, 24, 4);
   }
 
   .rstar {
     font-size: 1.2em;
     cursor: pointer;
-    color: rgb(229, 160, 21);
+    color: rgb(54, 4, 255);
   }
   
